--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.integration.jpa/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.integration.jpa/pom.xml
@@ -63,12 +63,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>org.springframework.spring-library</artifactId>
 			<type>libd</type>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
 		</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>org.springframework.instrument</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -77,15 +77,15 @@
         </dependency>
 
         <!-- JEE API -->
-		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>com.springsource.javax.persistence</artifactId>
-            <scope>provided</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <scope>${dependency.scope}</scope>
+        </dependency>
         <dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>com.springsource.javax.transaction</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- Test database driver -->
@@ -98,16 +98,20 @@
         <!-- JPA Provider -->
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>org.hibernate.ejb-library</artifactId>
-            <type>libd</type>
+            <artifactId>hibernate-entitymanager</artifactId>
             <scope>test</scope>
         </dependency>
 
         <!-- Weaver -->
         <dependency>
             <groupId>org.aspectj</groupId>
-            <artifactId>org.aspectj-library</artifactId>
-            <type>libd</type>
+            <artifactId>com.springsource.org.aspectj.weaver</artifactId>
+            <scope>${dependency.scope}</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>com.springsource.org.aspectj.runtime</artifactId>
+            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- Project dependencies -->
@@ -122,19 +126,19 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
             <version>${core.version}</version>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.integration</artifactId>
             <version>${core.version}</version>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.integration.jpa</artifactId>
             <version>${core.version}</version>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -146,17 +150,17 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.common.domain</artifactId>
             <version>${common.version}</version>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.tms.domain</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.tms.integration</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
 		</dependency>
 	</dependencies>
 </project>
