updated to Spring 3.1.1 and JPA2
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1797 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
@@ -18,16 +18,16 @@
 # Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 # 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 #  
-jdbc.test.driverClassName=org.hsqldb.jdbcDriver
-jdbc.test.url=jdbc:hsqldb:mem:openwms
-jdbc.test.username=sa
-jdbc.test.password=
-jdbc.test.persistenceUnit=OpenWMS-test
-jdbc.test.dialect=org.hibernate.dialect.HSQLDialect
-
-#jdbc.test.driverClassName=org.postgresql.Driver
-#jdbc.test.url=jdbc:postgresql:OPENWMSTEST
-#jdbc.test.username=OPENWMS
-#jdbc.test.password=OPENWMS
+#jdbc.test.driverClassName=org.hsqldb.jdbcDriver
+#jdbc.test.url=jdbc:hsqldb:mem:openwms
+#jdbc.test.username=sa
+#jdbc.test.password=
+#jdbc.test.dialect=org.hibernate.dialect.HSQLDialect
 #jdbc.test.persistenceUnit=OpenWMS-test
-#jdbc.test.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+jdbc.test.driverClassName=org.postgresql.Driver
+jdbc.test.url=jdbc:postgresql:OPENWMSTEST
+jdbc.test.username=OPENWMS
+jdbc.test.password=OPENWMS
+jdbc.test.persistenceUnit=OpenWMS-test
+jdbc.test.dialect=org.hibernate.dialect.PostgreSQLDialect
