updated to Spring 3.1.1 and JPA2
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1802 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.postgres/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.postgres/pom.xml
@@ -63,28 +63,28 @@
             <groupId>org.springframework</groupId>
             <artifactId>org.springframework.spring-library</artifactId>
             <type>libd</type>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- JEE API -->
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- Apache libraries -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>com.springsource.org.apache.commons.dbcp</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- Database libraries -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>com.springsource.org.postgresql.jdbc4</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- Project dependencies -->
