--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.domain/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.domain/pom.xml
@@ -54,15 +54,17 @@
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>com.springsource.org.apache.commons.lang</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.util</artifactId>
+            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- Test dependencies -->
