--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.hsql/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.hsql/pom.xml
@@ -83,7 +83,7 @@
         <!-- Database libraries -->
         <dependency>
             <groupId>org.hsqldb</groupId>
-            <artifactId>com.springsource.org.hsqldb</artifactId>
+            <artifactId>hsqldb</artifactId>
             <scope>${dependency.scope}</scope>
         </dependency>
 
