--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.service.spring/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.service.spring/pom.xml
@@ -133,7 +133,7 @@
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.hsqldb</groupId>
-            <artifactId>com.springsource.org.hsqldb</artifactId>
+            <artifactId>hsqldb</artifactId>
             <scope>test</scope>
         </dependency>
 
