--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.test/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.test/pom.xml
@@ -130,7 +130,13 @@
         <!-- Test database driver -->
         <dependency>
             <groupId>org.hsqldb</groupId>
-            <artifactId>com.springsource.org.hsqldb</artifactId>
+            <artifactId>hsqldb</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.166</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
