--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
@@ -18,16 +18,25 @@
 # Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 # 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 #  
-jdbc.test.driverClassName=org.hsqldb.jdbcDriver
-jdbc.test.url=jdbc:hsqldb:mem:openwms
-jdbc.test.username=sa
-jdbc.test.password=
-jdbc.test.dialect=org.hibernate.dialect.HSQLDialect
 jdbc.test.persistenceUnit=OpenWMS-test
 
-#jdbc.test.driverClassName=org.postgresql.Driver
-#jdbc.test.url=jdbc:postgresql:OPENWMSTEST
-#jdbc.test.username=OPENWMS
-#jdbc.test.password=OPENWMS
-#jdbc.test.persistenceUnit=OpenWMS-test
-#jdbc.test.dialect=org.hibernate.dialect.PostgreSQLDialect
+#H2Database
+#jdbc.test.driverClassName=org.h2.Driver
+#jdbc.test.url=jdbc:h2:mem:openwms
+#jdbc.test.username=sa
+#jdbc.test.password=sa
+#jdbc.test.dialect=org.hibernate.dialect.H2Dialect
+
+# HSQLDB
+#jdbc.test.driverClassName=org.hsqldb.jdbcDriver
+#jdbc.test.url=jdbc:hsqldb:mem:openwms
+#jdbc.test.username=sa
+#jdbc.test.password=
+#jdbc.test.dialect=org.hibernate.dialect.HSQLDialect
+
+# PostgreSQL
+jdbc.test.driverClassName=org.postgresql.Driver
+jdbc.test.url=jdbc:postgresql:OPENWMSTEST
+jdbc.test.username=OPENWMS
+jdbc.test.password=OPENWMS
+jdbc.test.dialect=org.hibernate.dialect.PostgreSQLDialect
