--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -488,6 +488,7 @@
         <apache.commons.dbcp.version>1.2.2.osgi</apache.commons.dbcp.version>
         <apache.commons.lang.version>2.5.0</apache.commons.lang.version>
         <aspectj.version>1.6.8.RELEASE</aspectj.version>
+        <el.version>2.2</el.version>
         <flex.version>3.2.0.3958</flex.version>
         <granite.version>2.2.1.GA</granite.version>
         <hibernate.version>4.1.3.Final</hibernate.version>
@@ -495,7 +496,7 @@
         <javax.persistence.version>1.0.0</javax.persistence.version>
         <junit.version>4.7.0</junit.version>
         <net.sf.ehcache.version>1.6.2</net.sf.ehcache.version>
-        <org.hsqldb.version>1.8.0.9</org.hsqldb.version>
+        <org.hsqldb.version>2.2.8</org.hsqldb.version>
         <org.postgresql.jdbc4.version>8.3.604</org.postgresql.jdbc4.version>
         <slf4j.version>1.5.10</slf4j.version>
         <spring.osgi.version>1.2.1</spring.osgi.version>
@@ -1227,9 +1228,10 @@
             </dependency>
 
             <!-- Database libraries -->
+            <!-- NON OSGI ARTIFACT -->
             <dependency>
                 <groupId>org.hsqldb</groupId>
-                <artifactId>com.springsource.org.hsqldb</artifactId>
+                <artifactId>hsqldb</artifactId>
                 <version>${org.hsqldb.version}</version>
             </dependency>
             <dependency>
