Migration to Spring 3.1.1/JPA2: Module common
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1809 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.service.api/pom.xml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.service.api/pom.xml
@@ -56,19 +56,20 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
             <version>${core.version}</version>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
 	    <dependency>
 	        <groupId>${project.groupId}</groupId>
 	        <artifactId>org.openwms.core.service.api</artifactId>
 	        <version>${core.version}</version>
-	        <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
 	    </dependency>
+        
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
     </dependencies>
 </project>
