--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.util/pom.xml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.util/pom.xml
@@ -63,7 +63,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>org.springframework.spring-library</artifactId>
             <type>libd</type>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
     </dependencies>
 </project>
