--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.domain/pom.xml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.domain/pom.xml
@@ -55,14 +55,14 @@
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
-            <scope>provided</scope>
-            <!-- Provided by the core domain model -->
+            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- JPA Provider -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
+            <scope>${dependency.scope}</scope>
         </dependency>
 
         <dependency>
@@ -75,6 +75,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
             <version>${core.version}</version>
+            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
