--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.integration/pom.xml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.integration/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- CORE Project dependencies -->
@@ -63,17 +63,20 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
             <version>${core.version}</version>
+            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.integration</artifactId>
             <version>${core.version}</version>
+            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain</artifactId>
+            <scope>${dependency.scope}</scope>
         </dependency>
     </dependencies>
 </project>
