--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.domain/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.domain/pom.xml
@@ -51,6 +51,7 @@
         </plugins>
     </build>
     <dependencies>
+        <!-- JEE API -->
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
@@ -62,46 +63,7 @@
             <artifactId>com.springsource.org.apache.commons.lang</artifactId>
             <scope>${dependency.scope}</scope>
         </dependency>
-
-        <!-- Test database driver -->
-        <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>com.springsource.org.hsqldb</artifactId>
-            <scope>test</scope>
-        </dependency>
         
-        <!-- JPA Provider -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Weaver -->
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>com.springsource.org.aspectj.weaver</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>com.springsource.org.aspectj.runtime</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Test dependencies -->
-        <dependency>
-            <groupId>javax.transaction</groupId>
-            <artifactId>com.springsource.javax.transaction</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.spring-library</artifactId>
-            <type>libd</type>
-            <scope>test</scope>
-        </dependency>
-
         <!-- CORE Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
