Migration to Spring 3.1.1/JPA2: Module tms
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1810 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.service.spring/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.service.spring/pom.xml
@@ -82,26 +82,12 @@
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>com.springsource.javax.transaction</artifactId>
             <scope>${dependency.scope}</scope>
-        </dependency>
-
-        <!-- Test database driver -->
-        <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>com.springsource.org.hsqldb</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- JPA Provider -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <!-- Weaver -->
