--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.integration/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.integration/pom.xml
@@ -56,30 +56,30 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
             <version>${core.version}</version>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.integration</artifactId>
             <version>${core.version}</version>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.common.domain</artifactId>
             <version>${common.version}</version>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
 		</dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.integration</artifactId>
             <version>${common.version}</version>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
         </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.tms.domain</artifactId>
-            <scope>provided</scope>
+            <scope>${dependency.scope}</scope>
 		</dependency>
 	</dependencies>
 </project>
