--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.integration.jpa/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.integration.jpa/pom.xml
@@ -70,11 +70,6 @@
             <artifactId>org.springframework.instrument</artifactId>
             <scope>${dependency.scope}</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.test</artifactId>
-            <scope>test</scope>
-        </dependency>
 
         <!-- JEE API -->
         <dependency>
@@ -86,20 +81,6 @@
             <groupId>javax.transaction</groupId>
             <artifactId>com.springsource.javax.transaction</artifactId>
             <scope>${dependency.scope}</scope>
-        </dependency>
-
-        <!-- Test database driver -->
-        <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>com.springsource.org.hsqldb</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- JPA Provider -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <!-- Weaver -->
@@ -115,13 +96,6 @@
         </dependency>
 
         <!-- Project dependencies -->
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.test</artifactId>
-            <version>${core.version}</version>
-            <type>test-jar</type>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
@@ -140,12 +114,6 @@
             <version>${core.version}</version>
             <scope>${dependency.scope}</scope>
         </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.infrastructure.hsql</artifactId>
-            <version>${common.version}</version>
-            <scope>test</scope>
-        </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.common.domain</artifactId>
@@ -162,5 +130,14 @@
 			<artifactId>org.openwms.tms.integration</artifactId>
             <scope>${dependency.scope}</scope>
 		</dependency>
+
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.test</artifactId>
+            <version>${core.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
