Migration to Spring 3.1.1 and JPA2
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1815 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.hsql/src/main/resources/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.hsql/src/main/resources/org.openwms.core.infrastructure.configuration.properties
@@ -26,7 +26,7 @@
 
 # JDBC options, used by the DataSource bean
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql:OPENWMSTEST
+jdbc.url=jdbc:postgresql:OPENWMS
 jdbc.username=OPENWMS
 jdbc.password=OPENWMS
 jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
