Migration to Spring 3.1.1 and JPA2: Removed hsqldb dependency
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1820 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.app.par/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.app.par/pom.xml
@@ -126,17 +126,17 @@
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>com.springsource.freemarker</artifactId>
-            <scope>${dependency.scope}</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>com.springsource.org.postgresql.jdbc4</artifactId>
-            <scope>${dependency.scope}</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <scope>${dependency.scope}</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
