git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1824 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
@@ -20,7 +20,7 @@
 #  
 jdbc.test.persistenceUnit=OpenWMS-test
 
-#H2Database
+# H2Database
 #jdbc.test.driverClassName=org.h2.Driver
 #jdbc.test.url=jdbc:h2:mem:openwms
 #jdbc.test.username=sa
@@ -28,15 +28,15 @@ jdbc.test.persistenceUnit=OpenWMS-test
 #jdbc.test.dialect=org.hibernate.dialect.H2Dialect
 
 # HSQLDB
-#jdbc.test.driverClassName=org.hsqldb.jdbcDriver
-#jdbc.test.url=jdbc:hsqldb:mem:openwms
-#jdbc.test.username=sa
-#jdbc.test.password=
-#jdbc.test.dialect=org.hibernate.dialect.HSQLDialect
+jdbc.test.driverClassName=org.hsqldb.jdbcDriver
+jdbc.test.url=jdbc:hsqldb:mem:openwms
+jdbc.test.username=sa
+jdbc.test.password=
+jdbc.test.dialect=org.hibernate.dialect.HSQLDialect
 
 # PostgreSQL
-jdbc.test.driverClassName=org.postgresql.Driver
-jdbc.test.url=jdbc:postgresql:OPENWMSTEST
-jdbc.test.username=OPENWMS
-jdbc.test.password=OPENWMS
-jdbc.test.dialect=org.hibernate.dialect.PostgreSQLDialect
+#jdbc.test.driverClassName=org.postgresql.Driver
+#jdbc.test.url=jdbc:postgresql:OPENWMSTEST
+#jdbc.test.username=OPENWMS
+#jdbc.test.password=OPENWMS
+#jdbc.test.dialect=org.hibernate.dialect.PostgreSQLDialect
