worked on problem that tests fail on H2 and HSQLDB, added DERBY as well
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1835 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.test/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.test/pom.xml
@@ -138,20 +138,31 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.infrastructure.hsql</artifactId>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>com.springsource.org.postgresql.jdbc4</artifactId>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>com.springsource.org.postgresql.jdbc4</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>com.springsource.org.apache.commons.dbcp</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.infrastructure.hsql</artifactId>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.infrastructure.postgres</artifactId>
             <scope>compile</scope>
-        </dependency>
+        </dependency-->
     </dependencies>
 </project>
