git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1838 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
@@ -30,13 +30,13 @@ jdbc.test.persistenceUnit=OpenWMS-test
 #jdbc.test.showSql=false
 
 # H2Database
-#jdbc.test.driverClassName=org.h2.Driver
-#jdbc.test.url=jdbc:h2:mem:openwms
-#jdbc.test.username=sa
-#jdbc.test.password=sa
-#jdbc.test.dialect=org.hibernate.dialect.H2Dialect
-#jdbc.test.database=H2
-#jdbc.test.showSql=false
+jdbc.test.driverClassName=org.h2.Driver
+jdbc.test.url=jdbc:h2:mem:openwms
+jdbc.test.username=sa
+jdbc.test.password=sa
+jdbc.test.dialect=org.hibernate.dialect.H2Dialect
+jdbc.test.database=H2
+jdbc.test.showSql=false
 
 # HSQLDB
 #jdbc.test.driverClassName=org.hsqldb.jdbcDriver
@@ -48,10 +48,10 @@ jdbc.test.persistenceUnit=OpenWMS-test
 #jdbc.test.showSql=false
 
 # PostgreSQL
-jdbc.test.driverClassName=org.postgresql.Driver
-jdbc.test.url=jdbc:postgresql:OPENWMSTEST
-jdbc.test.username=OPENWMS
-jdbc.test.password=OPENWMS
-jdbc.test.dialect=org.hibernate.dialect.PostgreSQLDialect
-jdbc.test.database=POSTGRESQL
-jdbc.test.showSql=false
+#jdbc.test.driverClassName=org.postgresql.Driver
+#jdbc.test.url=jdbc:postgresql:OPENWMSTEST
+#jdbc.test.username=OPENWMS
+#jdbc.test.password=OPENWMS
+#jdbc.test.dialect=org.hibernate.dialect.PostgreSQLDialect
+#jdbc.test.database=POSTGRESQL
+#jdbc.test.showSql=false
