--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.test/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.test/pom.xml
@@ -132,6 +132,12 @@
             <artifactId>hsqldb</artifactId>
             <scope>compile</scope>
         </dependency>
+        <!-- dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>com.springsource.org.hsqldb</artifactId>
+            <version>1.8.0.10</version>
+            <scope>compile</scope>
+        </dependency-->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
