git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1839 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
@@ -22,7 +22,7 @@ jdbc.test.persistenceUnit=OpenWMS-test
 
 # Derby
 #jdbc.test.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
-#jdbc.test.url=jdbc:derby:openwms;create=true;
+#jdbc.test.url=jdbc:derby:target/openwms;create=true;
 #jdbc.test.username=
 #jdbc.test.password=
 #jdbc.test.dialect=org.hibernate.dialect.DerbyTenSevenDialect
